# Signal

./: CMakeLists.txt  LICENSE  README.md  Signal.hpp  example.cpp
include/Signal/: Signal.hpp
